# iris-recog

./: main.py  pyproject.toml
core/: dataset.py  encoder.py  matcher.py  normalization.py  preprocessing.py  segmentation.py
docs/: main.md  phase01.md  phase02.md  phase03.md
tests/: test_encoder.py  test_matcher.py
tools/: benchmark_accuracy.py  visualize_pipeline.py
